contenu html redigé

--- a/index.html
+++ b/index.html
@@ -1,26 +1,117 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title> Booki </title>
-        <meta name="Booki" content="Planifiez votre vaccance" />
+        <title> ohmyfood </title>
+        <meta name="ohmyfood" content="restaurant" />
         <meta charset ="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="Styles/Projet2.css"/>
-        <link rel="stylesheet" href="Styles/style-tablette.css"/>
-        <link rel="stylesheet" href="Styles/style-telephone.css"/>
+        <link rel="stylesheet" href="Styles/Projet3.css"/>
         <script src="https://kit.fontawesome.com/71d1a599f8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
         integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
     </head>
     <body>
-        <heager>
+        <header>
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" />
-        </heager>
+        </header>
         <main>
             <section>
-                
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Paris, Belleville</h3>
             </section>
+            <section>
+                <div>
+                    <h1> Réservez le menu qui vous convient</h1>
+                    <h3> Découvrez des restaurants d'excepton, séléctionnés par son soins.</h3>
+                </div>
+                <div>
+                    Explorer nos restaurants
+                </div>
+            </section>
+            <section>
+                <div>
+                    <h1> Fonctionnement </h1>
+                </div>
+                <div>
+                    <h4>1</h4>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <h3>Choisissez un restaurant</h3>
+                </div>
+                <div>
+                    <h4>2</h4>
+                    <i class="fa-solid fa-list-ul"></i>
+                    <h3>Choisissez un restaurant</h3>
+                </div>
+                <div>
+                    <h4>3</h4>
+                    <i class="fa-solid fa-store"></i>
+                    <h3>Choisissez un restaurant</h3>
+                </div>
+            </section>
+            <section>
+                <div>
+                    <h1> Restaurants </h1>
+                </div>
+                <div>
+                    <h4>Nouveau</h4>
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du gout" />
+                    <div>
+                        <h1>La palette du gout</h1>
+                        <h3>Ménilmontant</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>    
+                </div>
+                <div>
+                    <h4>Nouveau</h4>
+                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Charonne" />
+                    <div>
+                        <h1>La note enchantée</h1>
+                        <h3>Charonne</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>    
+                </div>
+                <div>
+                    <h4>Nouveau</h4>
+                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française" />
+                    <div>
+                        <h1>A la française</h1>
+                        <h3>Cité Rouge</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>    
+                </div>
+                <div>
+                    <h4>Nouveau</h4>
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Delice des sens" />
+                    <div>
+                        <h1>Le délice des sens</h1>
+                        <h3>Folie-Méricourt</h3>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>    
+                </div>
+            </section>           
         </main>
-
+        <footer>
+            <div>
+                <h1>ohmyfood</h1>
+            </div>
+            <div>
+                <a href="#">
+                <i class="fa-solid fa-utensils"></i>
+                <span> Proposer un restaurant</span>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <span> Devenir partenaire</span>
+                </a>
+            </div>
+            <div>
+                <span> Mention légales </span>
+            </div>
+            <div>
+                <a href="mailto:contact@ohmyfood.com">Contact</a>
+            </div>
+        </footer>
     </body>
 </html>
