--- a/francaise.html
+++ b/francaise.html
@@ -5,7 +5,7 @@
         <meta name="A la française" content="restaurant" />
         <meta charset ="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="Styles/Proje.css"/>
+        <link rel="stylesheet" href="doc-css/style-projet3.css"/>
         <script src="https://kit.fontawesome.com/71d1a599f8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
         integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
