--- a/delicieux.html
+++ b/delicieux.html
@@ -12,159 +12,156 @@
     </head>
     <body>
         <header>
-            <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" />
+            <a href="./index.html" class="retour">
+                <i class="fa-solid fa-arrow-left "></i>
+            </a>
+            <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo-menu" />
         </header>
         <main>
-            <section>
-                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la Française"/>
-            </section>
-            <section>
-                <div>
+            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le delice du gout" class="image-menu"/>
+            
+            <section class="menu">
+                <div class="menu__titre">
                     <h1>Le délice des sens</h1>
                     <i class="fa-regular fa-heart"></i>
                 </div>
-                <div>
-                    ENTREES
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Tartare de thon</h2>
-                        </div>
-                        <div>
-                            <div>Assaisonné au yuzu</div>
-                            <div>25€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Bouchée de homard croustillant</h2>
-                        </div>
-                        <div>
-                            <div> Et sa farandole de petits légumes</div>
-                            <div>35€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <div>                        
-                            <h2>Velouté de cèpes</h2>
-                        </div>
-                        <div>
-                            <div> Aux truffes</div>
-                            <div>20€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    <!-- entrée-->
+                <div class="menu__sous-titre">
+                    <div>ENTREES</div>
+                    <div class="menu__sous-titre__tiret"></div>
                 </div>
 
-                <div>
-                    PLATS
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Poulet rôti aux herbes de Provence</h2>
-                        </div>
-                        <div>
-                            <div> Et sa crème de truffe</div>
-                            <div>40€</div>
-                        </div>
+                <div class="menu__contenu">                    
+                    <div class="menu__contenu--descrip">
+                        <h2>Tartare de thon</h2>
+                        <p> Assaisonné au yuzu</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        25€
+                    </div> 
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Langouste rôtie</h2>
-                        </div>
-                        <div>
-                            <div> Et ses légumes de saison</div>
-                            <div>35€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Côte de boeuf Angus </h2>
-                        </div>
-                        <div>
-                            <div> Et sa purée de panais</div>
-                            <div>44€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
 
-                <div>
-                    DESSERTS
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Farandole de desserts</h2>
-                        </div>
-                        <div>
-                            <div> Du chef</div>
-                            <div>18€</div>
-                        </div>
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Bouchée de homard croustillant</h2>
+                        <p> Et sa farandole de petits légumes</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        35€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Crème brulée</h2>
-                        </div>
-                        <div>
-                            <div> Revisitée</div>
-                            <div>22€</div>
-                        </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Velouté de cèpes</h2>
+                        <p> Aux truffes</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        20€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Tiramisu</h2>
-                        </div>
-                        <div>
-                            <div> À la noisette</div>
-                            <div>23€</div>
-                        </div>
+                    <!-- plats-->                
+                <div  class="menu__sous-titre">
+                    <div>PLATS</div>
+                    <div class="menu__sous-titre__tiret"></div>                    
+                </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Poulet rôti aux herbes de Provence</h2>
+                        <p> Et sa crème de truffe</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        40€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
-            </section>
-            <section>
-                Commander
-            </section>            
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Langouste rôtie</h2>
+                        <p> Et ses légumes de saison</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        35€
+                    </div>
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Côte de boeuf Angus</h2>
+                        <p> Et sa purée de panais</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        44€
+                    </div>
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+                    <!-- deserts-->                
+                <div  class="menu__sous-titre">
+                    <div>DESSERTS</div>
+                    <div class="menu__sous-titre__tiret"></div>                    
+                </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Farandole de desserts</h2>
+                        <p> Du chef</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        18€
+                    </div>
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Crème brulée</h2>
+                        <p> Revisité</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        22€
+                    </div>
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+                
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Tiramisu</h2>
+                        <p> À la noisette</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        23€
+                    </div>
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+                    <!-- boutton commander-->
+                <div class="btn-explore menu--modification-button">
+                    Commander
+                </div> 
+            </section>           
         </main>
         <footer>
             <div>
@@ -188,6 +185,6 @@
             <div>
                 <a href="mailto:contact@ohmyfood.com">Contact</a>
             </div>
-        </footer>
+        </footer>                            
     </body>
 </html>
