--- a/francaise.html
+++ b/francaise.html
@@ -26,148 +26,145 @@
             <section class="menu">
                 <div class="menu__titre">
                     <h1>A la française</h1>
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart menu--title__backgroundHeart"></i>
                 </div>
+                    <!-- entrée-->
                 <div class="menu__sous-titre">
                     <div>ENTREES</div>
                     <div class="menu__sous-titre__tiret"></div>
                 </div>
-                <div class="menu__contenu">
+
+                <div class="menu__contenu">                    
                     <div class="menu__contenu--descrip">
                         <h2>Tartare de poulpe acidulé</h2>
                         <p> Aux zests d'orange</p>
                     </div>
                     <div class="menu__contenu--somme">
                         25€
+                    </div> 
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Velouté de légumes d'antan</h2>
+                        <p> Carotte, panais, topinambour</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        35€
                     </div>
                     <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
                     </div>                        
                 </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Velouté de légumes d'antan</h2>
-                        </div>
-                        <div>
-                            <div> Carotte, panais, topinambour</div>
-                            <div>35€</div>
-                        </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Soupe à l'oignon</h2>
+                        <p> Revisitée</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        20€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
-                <div>
-                    <div>
-                        <div>                        
-                            <h2>Velouté de légumes d'antan</h2>
-                        </div>
-                        <div>
-                            <div> Carotte, panais, topinambour</div>
-                            <div>35€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    <!-- plats-->                
+                <div  class="menu__sous-titre">
+                    <div>PLATS</div>
+                    <div class="menu__sous-titre__tiret"></div>                    
                 </div>
 
-                <div>
-                    PLATS
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Coquilles Saint-Jacques</h2>
-                        </div>
-                        <div>
-                            <div> Accompagées d'une purée de panais</div>
-                            <div>40€</div>
-                        </div>
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Coquilles Saint-Jacques</h2>
+                        <p> Accompagées d'une purée de panais</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        40€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Magret de canard</h2>
-                        </div>
-                        <div>
-                            <div> Et parmentier de pommes de terre</div>
-                            <div>35€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Pigeonneau d Ille-et-Vilaine</h2>
-                        </div>
-                        <div>
-                            <div> Sur son lit de gnocchis aux légumes</div>
-                            <div>44€</div>
-                        </div>
-                    </div>
-                    <div>
-                        <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
 
-                <div>
-                    DESSERTS
-                </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Pétales de violettes glacés</h2>
-                        </div>
-                        <div>
-                            <div> Et purée de noisettes</div>
-                            <div>18€</div>
-                        </div>
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Magret de canard</h2>
+                        <p> Et parmentier de pommes de terre</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        35€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Fondant au chocolat</h2>
-                        </div>
-                        <div>
-                            <div> Revisité</div>
-                            <div>22€</div>
-                        </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Pigeonneau d Ille-et-Vilaine</h2>
+                        <p> Sur son lit de gnocchis aux légumes</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        44€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
-                <div>
-                    <div>
-                        <div>
-                            <h2>Millefeuille croustillant</h2>
-                        </div>
-                        <div>
-                            <div> Myrtilles et pâte d amande</div>
-                            <div>23€</div>
-                        </div>
+                    <!-- deserts-->                
+                <div  class="menu__sous-titre">
+                    <div>DESSERTS</div>
+                    <div class="menu__sous-titre__tiret"></div>                    
+                </div>
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Pétales de violettes glacés</h2>
+                        <p> Et purée de noisettes</p>
                     </div>
-                    <div>
+                    <div class="menu__contenu--somme">
+                        18€
+                    </div>
+                    <div class="menu__contenu--icon">
                         <i class="fa-solid fa-circle-check"></i>
-                    </div>
+                    </div>                        
                 </div>
-            </section>
-            <section>
-                Commander
-            </section>            
+
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Fondant au chocolat</h2>
+                        <p> Revisité</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        22€
+                    </div>
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+                
+                <div class="menu__contenu">
+                    <div class="menu__contenu--descrip">
+                        <h2>Millefeuille croustillant</h2>
+                        <p> Myrtilles et pâte d amande</p>
+                    </div>
+                    <div class="menu__contenu--somme">
+                        23€
+                    </div>
+                    <div class="menu__contenu--icon">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>                        
+                </div>
+                    <!-- boutton commander-->
+                <div class="btn-explore menu--modification-button">
+                    Commander
+                </div> 
+            </section>           
         </main>
         <footer>
             <div>
