--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
         integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
     </head>
     <body>
-        <header>
+        <div class="box">
+            <div class="container">
+              <span class="circle"></span>
+              <span class="circle"></span>
+              <span class="circle"></span>
+              <span class="circle"></span>
+              <span class="circle"></span>
+            </div>
+        </div>
+        <header class="loading-home">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" />
         </header>
-        <main>
+        <main class="loading-home">
             <section class="localiser">
                 <form action="#" class="localiser__form">
                     <label for="local" class="localiser__form--label">
@@ -24,10 +33,6 @@
                     </label>
                     <input type="text" name="local" id="local" placeholder="Paris, Belleville" class="localiser__form--imput">
                 </form>
-                <!--
-                <i class="fa-solid fa-location-dot"></i>
-                <h3>Paris, Belleville</h3>
-            -->
             </section>
             <section class="reserver">
                 <div class="reserver--contenu">
@@ -116,7 +121,7 @@
                 </div>
             </section>           
         </main>
-        <footer>
+        <footer class="loading-home">
             <div class="footer__logo">
                 <h1 >ohmyfood</h1>
             </div>
