--- a/francaise.html
+++ b/francaise.html
@@ -34,7 +34,7 @@
                     <div class="menu__sous-titre__tiret"></div>
                 </div>
 
-                <div class="menu__contenu">                    
+                <div class="menu__contenu menu_contenu--anim anim1">                    
                     <div class="menu__contenu--descrip">
                         <h2>Tartare de poulpe acidulé</h2>
                         <p> Aux zests d'orange</p>
@@ -47,7 +47,7 @@
                     </div>                        
                 </div>
 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim2">
                     <div class="menu__contenu--descrip">
                         <h2>Velouté de légumes d'antan</h2>
                         <p> Carotte, panais, topinambour</p>
@@ -60,7 +60,7 @@
                     </div>                        
                 </div>
 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim3">
                     <div class="menu__contenu--descrip">
                         <h2>Soupe à l'oignon</h2>
                         <p> Revisitée</p>
@@ -78,7 +78,7 @@
                     <div class="menu__sous-titre__tiret"></div>                    
                 </div>
 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim1">
                     <div class="menu__contenu--descrip">
                         <h2>Coquilles Saint-Jacques</h2>
                         <p> Accompagées d'une purée de panais</p>
@@ -91,7 +91,7 @@
                     </div>                        
                 </div>
 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim2">
                     <div class="menu__contenu--descrip">
                         <h2>Magret de canard</h2>
                         <p> Et parmentier de pommes de terre</p>
@@ -104,7 +104,7 @@
                     </div>                        
                 </div>
 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim3">
                     <div class="menu__contenu--descrip">
                         <h2>Pigeonneau d Ille-et-Vilaine</h2>
                         <p> Sur son lit de gnocchis aux légumes</p>
@@ -122,7 +122,7 @@
                     <div class="menu__sous-titre__tiret"></div>                    
                 </div>
 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim1">
                     <div class="menu__contenu--descrip">
                         <h2>Pétales de violettes glacés</h2>
                         <p> Et purée de noisettes</p>
@@ -135,7 +135,7 @@
                     </div>                        
                 </div>
 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim2">
                     <div class="menu__contenu--descrip">
                         <h2>Fondant au chocolat</h2>
                         <p> Revisité</p>
@@ -148,7 +148,7 @@
                     </div>                        
                 </div>
                 
-                <div class="menu__contenu">
+                <div class="menu__contenu menu_contenu--anim anim3">
                     <div class="menu__contenu--descrip">
                         <h2>Millefeuille croustillant</h2>
                         <p> Myrtilles et pâte d amande</p>
