--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
     </head>
     <body>
         <div class="box">
-            <div class="container">
+            <div class="container background">
+                <i class="fa-solid fa-forward"></i>
+                <i class="fa-solid fa-forward"></i>
+                <i class="fa-solid fa-forward"></i>
+                <i class="fa-solid fa-forward"></i>
+                <i class="fa-solid fa-forward"></i>
+              <!--  <span class="circle"><i class="fa-solid fa-forward"></i></span>
+                <span class="circle"><i class="fa-solid fa-forward"></i></span>
+                <span class="circle"><i class="fa-solid fa-forward"></i></span>
+                <span class="circle"><i class="fa-solid fa-forward"></i></span>
+                <span class="circle"><i class="fa-solid fa-forward"></i></span>
+                <span class="circle"></span>
               <span class="circle"></span>
               <span class="circle"></span>
-              <span class="circle"></span>
-              <span class="circle"></span>
-              <span class="circle"></span>
+              <span class="circle"><i class="fa-duotone fa-forward"></i></span>
+              <span class="circle"></span> -->
             </div>
         </div>
         <header class="loading-home">
@@ -76,7 +86,7 @@
                                 <h1>La palette du gout</h1>
                                 <h3>Ménilmontant</h3>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <span><i class="fa-regular fa-heart"></i></span>
                         </div>
                     </a>    
                 </div>
@@ -89,7 +99,7 @@
                                 <h1>La note enchantée</h1>
                                 <h3>Charonne</h3>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                             <span><i class="fa-regular fa-heart"></i></span>
                         </div>
                     </a>   
                 </div>
@@ -102,7 +112,7 @@
                                 <h1>A la française</h1>
                                 <h3>Cité Rouge</h3>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <span><i class="fa-regular fa-heart"></i></span>
                         </div> 
                     </a>   
                 </div>
@@ -115,7 +125,7 @@
                                 <h1>Le délice des sens</h1>
                                 <h3>Folie-Méricourt</h3>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <span><i class="fa-regular fa-heart"></i></span>
                         </div>
                     </a>    
                 </div>
