--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="back-animation">
         </div>
-        <header class="loading-home">
+        <header class="loading-home position-fixe">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" />
         </header>
         <main class="loading-home">
@@ -34,7 +34,6 @@
                         <i class="fa-solid fa-location-dot"></i>
                     </label>
                     <div class="localiser__form--imput"> Paris, Belleville</div>
-                    <!-- <input type="text" name="local" id="local" placeholder="Paris, Belleville" class="localiser__form--imput"> -->
                 </form>
             </section>
             <section class="reserver">
@@ -78,7 +77,7 @@
                     <div class="cards__figure">
                         <a href="palette-gout.html">
                             <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du gout" />
-                            <div class="cards__figure--nouveau"> <h4><p>Nouveau</p></h4></div>
+                            <div class="cards__figure--nouveau"> <h4><span>Nouveau</span></h4></div>
                             <div class="cards__figure__texicon">
                                 <div>
                                     <h1>La palette du gout</h1>
@@ -91,7 +90,7 @@
                     <div class="cards__figure">
                         <a href="note-enchantee.html">
                             <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Charonne" />
-                            <div class="cards__figure--nouveau"><h4><p>Nouveau</p></h4></div>
+                            <div class="cards__figure--nouveau"><h4><span>Nouveau</span></h4></div>
                             <div class="cards__figure__texicon" >
                                 <div>
                                     <h1>La note enchantée</h1>
