--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
     </head>
     <body>
+        <!-- debut animation loading -->
         <div class="box">
             <div class="container">
                 <div class="bille"></div>
@@ -24,10 +25,16 @@
         </div>
         <div class="back-animation">
         </div>
+        <!-- fin animation loading -->
+
+        <!-- header -->
         <header class="loading-home position-fixe">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" />
         </header>
+
+        <!-- main -->
         <main class="loading-home">
+            <!---->
             <section class="localiser">
                 <form action="#" class="localiser__form">
                     <label  class="localiser__form--label">
@@ -36,6 +43,7 @@
                     <div class="localiser__form--imput"> Paris, Belleville</div>
                 </form>
             </section>
+            <!---->
             <section class="reserver">
                 <div class="reserver--contenu">
                     <h1 class="reserver--contenu__text-gras"> Réservez le menu qui vous convient</h1>
@@ -45,6 +53,7 @@
                     Explorer nos restaurants
                 </div>
             </section>
+            <!---->
             <section class="fonctionnement">
                 <div class="fonctionnement__fonctionnement-text">
                     <h1> Fonctionnement </h1>
@@ -58,15 +67,16 @@
                     <div class="fonctionnement__menu-cartes">
                         <h4 class="fonctionnement__menu-cartes__rond">2</h4>
                         <i class="fa-solid fa-list-ul fonctionnement__menu-cartes--icon"></i>
-                        <h3>Choisissez un restaurant</h3>
+                        <h3>Composez votre menu</h3>
                     </div>
                     <div class="fonctionnement__menu-cartes">
                         <h4 class="fonctionnement__menu-cartes__rond">3</h4>
                         <i class="fa-solid fa-store fonctionnement__menu-cartes--icon"></i>
-                        <h3>Choisissez un restaurant</h3>
+                        <h3>Dégustez au restaurant</h3>
                     </div>
                 </div>
             </section>
+            <!---->
             <section class="cards">
                 <div class="cards__resto">
                     <h1> Restaurants </h1>
@@ -103,8 +113,7 @@
                     </div>
                     <div class="width-adapter">
                     <div class="cards__figure">
-                        <a href="francaise.html">
-                        
+                        <a href="francaise.html">                        
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française" />
                             <div class="cards__figure__texicon">
                                 <div>
@@ -116,8 +125,7 @@
                         </a>   
                     </div>
                     <div class="cards__figure">
-                        <a href="delicieux.html">
-                           
+                        <a href="delicieux.html">                           
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Delice des sens" />
                             <div class="cards__figure__texicon">
                                 <div>
@@ -132,6 +140,8 @@
                 </div>                
             </section>           
         </main>
+
+        <!-- footer -->
         <footer class="loading-home">
             <div class="footer__logo">
                 <h1 >ohmyfood</h1>
